--- a/app/src/main/res/layout/activity_playlist.xml
+++ b/app/src/main/res/layout/activity_playlist.xml
@@ -6,6 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".ui.PlayListActivity">
 
+    <include layout="@layout/activity_no_internet"
+        android:visibility="gone"/>
+    
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvPlaylist"
         android:layout_width="match_parent"
