--- a/app/src/main/res/layout/activity_no_internet.xml
+++ b/app/src/main/res/layout/activity_no_internet.xml
@@ -14,18 +14,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-    <ImageView
-        android:id="@+id/icon_info"
-        android:layout_width="41dp"
-        android:layout_height="41dp"
-        android:layout_marginEnd="24dp"
-        android:background="@mipmap/ic_launcher"
-        app:layout_constraintBottom_toTopOf="@+id/view_line"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3" />
-
     <ImageView
         android:id="@+id/no_internet"
         android:layout_width="275dp"
@@ -35,7 +23,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/no_internet" />
 
     <Button
         android:id="@+id/try_again"
