--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="p16dp">16dp</dimen>
+    <dimen name="p24dp">24dp</dimen>
+    <dimen name="p32dp">32dp</dimen>
+    <dimen name="p64dp">64dp</dimen>
+    <dimen name="p84dp">84dp</dimen>
+    <dimen name="p20dp">20dp</dimen>
+    <dimen name="p10dp">10dp</dimen>
 </resources>
