--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -20,13 +20,12 @@
         android:id="@+id/coordinator"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/background_light"
-        android:fitsSystemWindows="true">
+        android:background="@android:color/background_light">
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/main.appbar"
             android:layout_width="match_parent"
-            android:layout_height="252dp"
+            android:layout_height="196dp"
             android:background="@color/white_1"
             android:fitsSystemWindows="true">
 
@@ -45,50 +44,6 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:id="@+id/toolbar_container"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:layout_scrollFlags="scroll|exitUntilCollapsed"
-                        >
-
-                        <androidx.appcompat.widget.Toolbar
-                            android:id="@+id/main.toolbar"
-                            android:layout_width="match_parent"
-                            android:layout_height="?attr/actionBarSize"
-                            android:background="@color/white"
-                            app:layout_constraintTop_toTopOf="parent">
-
-                            <TextView
-                                android:id="@+id/toolbarTitle"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:text="@string/playlist"
-                                android:textColor="@color/red"
-                                android:textSize="20sp" />
-
-                            <TextView
-                                android:id="@+id/toolbarBack"
-                                android:drawablePadding="-8dp"
-                                android:layout_width="wrap_content"
-                                android:layout_height="match_parent"
-                                android:layout_gravity="center_vertical"
-                                android:gravity="center"
-                                android:paddingHorizontal="12dp"
-                                android:text="@string/back"
-                                android:textColor="@color/red"
-                                app:drawableStartCompat="@drawable/ic_back" />
-                        </androidx.appcompat.widget.Toolbar>
-
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-
-                    <View
-                        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/view_color" />
-
                     <TextView
                         android:id="@+id/tvTitle"
                         android:layout_width="match_parent"
@@ -100,7 +55,7 @@
                         android:scaleType="centerCrop"
                         android:fitsSystemWindows="true"
                         app:layout_collapseMode="parallax"
-                        android:layout_marginTop="24dp"
+                        android:layout_marginTop="84dp"
                         android:layout_marginHorizontal="@dimen/p16dp"
                         android:layout_gravity="center_vertical" />
 
@@ -163,6 +118,42 @@
             tools:ignore="ContentDescription" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/white"
+            app:layout_constraintTop_toTopOf="@+id/detail_layout">
+
+            <TextView
+                android:id="@+id/toolbarTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/playlist"
+                android:textColor="@color/red"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/toolbarBack"
+                android:drawablePadding="-8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_vertical"
+                android:gravity="center"
+                android:paddingHorizontal="12dp"
+                android:text="@string/back"
+                android:textColor="@color/red"
+                app:drawableStartCompat="@drawable/ic_back" />
+        </androidx.appcompat.widget.Toolbar>
+
+        <View
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/view_color" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
